updated margins and images width

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
     </nav>
 
     </div>
-    <div class="about-container">
+   
         <div class="background-color">
         <h2 class="large-text"  id="about">About Chiara </h2>
         <div class="flex">
@@ -78,13 +78,17 @@
                 <img class="chiara-pic" src="https://i.ibb.co/C1Pwzg4/chi2-sq.jpg" alt="chi2-sq" border="0">
             </div>
         </div>
-    </div>
+
+        <div class="about-container">
         <div class="">
             <p> Learn more about my work experience </p>
             <a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=sharing"
                 target="_blank"> <button class="about-btn"> Download my resume </button> </a>
         </div>
-    <div class="dp-containter">
+    </div>
+    </div>
+
+    <div class="dp-containter about-container">
         <h2 class="large-text" id="about"> My Design philosophy </h2>
         <ul class="cute-bullets">
             <li>
@@ -98,7 +102,7 @@
     </div>
 
 
-    <div class="dp-containter">
+    <div class="dp-containter about-container">
 
         <h2 class="large-text" id="about"> My design process </h2>
         <div class="space-between">
@@ -141,9 +145,10 @@
                     redundant and repetitively phrasing the same idea multiple times. </p>
             </div>
         </div>
+    </div>
+    </div>
 
-
-        <div class="background-color about">
+        <div class="background-color">
             <h2 class="large-text"> I also specialized in: </h2>
             <div class="wrap-2">
                 <ul class="cute-bullets">
@@ -171,8 +176,16 @@
                     <li> CSS </li>
                     <li> JavaScript </li>
                 </ul>
-            </div>
+                <ul class="cute-bullets">
+                    <li> Storyboarding </li>
+                    <li> UX Workshops </li>
+                    <li> Ecommerce</li>
+
+                </ul>
         </div>
+    </div>
+  
+        <div class="about-container">
         <div class="personal">
             <h2>I enjoy doing: </h2>
 
@@ -207,10 +220,11 @@
 
             </div>
         </div>
+    </div>
 
-    </div>
-    </div>
-    </div>
+   
+    
+
 </div>
     <footer class="footer-container">
         <div class="footer-content">
