--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -65,13 +65,14 @@
 
 
         <!-- Context about the project -->
-        <div class="project-conext-container">
+       
      
                 <div class="background-color">
-                    <h2 style="margin-right: 1em;">Context</h2>
+                    <h2 class="large-text">Context</h2>
                         <div class="context">
            <p>
-                            To increase users' activity for the filtering feature of the shopping
+             Filtering is a huge part of the shopping experience.               
+            To increase users' activity for the filtering feature of the shopping
                             experience, precisely the product list page. However, it did evolve to look at the enterprise's filtering
                             experience, find ways to make the feature consistent, and
                             introduce horizontal filters.
@@ -82,7 +83,7 @@
                 </div>
             </div>
 
-                <div class="dp-containter">
+                <div class="project-conext-container dp-containter">
                     <h2>Design Process </h2>
                     <div class="wrap">
                         <div class="">
@@ -93,8 +94,8 @@
                                 <li> Competitive analysis </li>
                                 <li> Desk research </li>
                             </ul>
-
                         </div>
+
                         <div class="">
                             <img src="https://i.ibb.co/6W4nGwY/Ideate.png" alt="Ideate" border="0"
                                 style="width: 150px; height: auto;">
@@ -105,6 +106,7 @@
                                 <li> High fidelity prototype </li>
                             </ul>
                         </div>
+
                         <div class="">
 
                             <img src="https://i.ibb.co/Gnj4DGG/Testing.png" alt="Testing" border="0"
@@ -114,6 +116,7 @@
                                 <li> Unmoderated user testing </li>
                             </ul>
                         </div>
+
                         <div class="">
 
                             <img src="https://i.ibb.co/PxBkpsg/Analyze.png" alt="Analyze" border="0"
@@ -127,7 +130,7 @@
                     </div>
                 </div>
 
-
+                <div class="project-conext-container">
                 <div class="">
                     <h2 class="">User problems </h2>
                     <p>
