--- a/pages/about.html
+++ b/pages/about.html
@@ -107,7 +107,7 @@
         <h2 class="large-text" id="about"> My design process </h2>
         <div class="space-between">
             <div class="dp-box">
-                <h3> Discovery/Define</h3>
+                <h3> Understand </h3>
                 <img src="https://i.ibb.co/2FFqnyQ/Discovery.png" alt="Discovery" border="0"
                     style="width: 150px; height: auto;">
                 <p> Gathering as much information about what users value and their experience with a platform or
@@ -115,7 +115,7 @@
             </div>
 
             <div class="dp-box">
-                <h3> Ideate </h3>
+                <h3> Explore </h3>
                 <img src="https://i.ibb.co/6W4nGwY/Ideate.png" alt="Ideate" border="0"
                     style="width: 150px; height: auto;">
                 <p> With the data and information gathered, start thinking about how to make the experience while
@@ -130,7 +130,7 @@
                     and assist with designing solutions. </p>
             </div>
             <div class="dp-box">
-                <h3> Development</h3>
+                <h3> Materialize </h3>
                 <img src="https://i.ibb.co/NKFnP2G/Development.png" alt="Development" border="0"
                     style="width: 150px; height: auto;">
                 <p> I enjoy assisting in identifying containers and components and HTML structure; this is where my
@@ -144,6 +144,7 @@
                 <p> Gathering user data to improve and update solutions and automated testing." The original sentence is
                     redundant and repetitively phrasing the same idea multiple times. </p>
             </div>
+            <h3> Rinse and repeat </h3>
         </div>
     </div>
     </div>
