--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -29,6 +29,7 @@
 
     <div class="content-container-project">
         <header class="header-project">
+            
             <h1> Membership dashboard redesign </h1>
         </header>
         <nav class="nav-link fixed-nav header" id="NavBar">
@@ -87,11 +88,12 @@
 
                 <div class="dp-containter">
                     <h2>Design Process </h2>
+                    <h3> Rinse and repeat </h3>
                     <div class="wrap">
                         <div class="">
                             <img src="https://i.ibb.co/2FFqnyQ/Discovery.png" alt="Discovery" border="0"
                                 style="width: 150px; height: auto;">
-                            <h3> Discovery: </h3>
+                            <h3> Emphaize/Discovery: </h3>
                             <ul class="cute-bullets">
                                 <li> Competitive analysis </li>
                                 <li> User testing </li>
@@ -116,6 +118,7 @@
                             </ul>
                         </div>
                     </div>
+    
                 </div>
 
                 <h2 class="">Initial goal </h2>
