--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -85,6 +85,7 @@
 
                 <div class="project-conext-container dp-containter">
                     <h2>Design Process </h2>
+                    <h3> Rinse and repeat </h3>
                     <div class="wrap">
                         <div class="">
                             <img src="https://i.ibb.co/2FFqnyQ/Discovery.png" alt="Discovery" border="0"
