--- a/pages/chowdown.html
+++ b/pages/chowdown.html
@@ -81,6 +81,7 @@
                 </p>
                 <div class="dp-containter ">
                     <h2>Design Process </h2>
+                    <h3> Rinse and repeat </h3>
                     <div class="wrap">
                         <div class="">
                             <img src="https://i.ibb.co/2FFqnyQ/Discovery.png" alt="Discovery" border="0"
