--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -82,6 +82,7 @@ This project was from a UX project with Career Foundry.
 
         <div class="dp-containter ">
             <h2>Design Process </h2>
+            <h3> Rinse and repeat </h3>
             <div class="wrap">
                 <div class="">
                     <img src="https://i.ibb.co/2FFqnyQ/Discovery.png" alt="Discovery" border="0"
