flex image and text

--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -70,7 +70,7 @@
 
             <div class="">
                 <div class="background-color">
-                    <div class="">
+                    <div class="flex">
                         <div class="">
                             <h2>Context</h2>
                             <p class="para-img">
@@ -81,7 +81,7 @@
                             </p>
                         </div>
 
-                        <img src="https://i.ibb.co/T86G9vF/2-1-Membership-information.png"
+                        <img style="width: 600px;" src="https://i.ibb.co/T86G9vF/2-1-Membership-information.png"
                             alt="carepass dashboard setting page" border="0">
                     </div>
                 </div>
