--- a/pages/projects.html
+++ b/pages/projects.html
@@ -194,7 +194,7 @@
                     <li> <a href="https://www.behance.net/chiaraboisaubin"  aria-label="behance" rel="noopener noreferrer"
                             target="_blank"> <span class="fa fa-behance"> </span> </a>
                     </li>
-                    <li> <a href="https://www.instagram.com/cdb_arts/" aria-label="instagram" rel="noopener noreferrer"
+                    <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram" rel="noopener noreferrer"
                             target="_blank"><span class="fa fa-instagram"> </span> </a> </li>
                     <li> <a href="https://github.com/chiaraboisaubin"  aria-label="github" rel="noopener noreferrer"
                             target="_blank"> <span class="fa fa-github"> </span> </a> </li>
