--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="title">
                     <p> Hi, I'm</p>
                     <h1>Chiara BoisAubin</h1>
-                    <p style="margin-bottom: 1em;"> (chee-r-ah bruh-zu-ben) </p>
+                    <p  style="margin-bottom: 1em; font-size: 24px;"> (chee-r-ah bruh-zu-ben) </p>
                 </div>
                 <div class="par">
                     <p>
@@ -51,21 +51,22 @@
                     </ul>
                     <ul class="social-links">
                         <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin"
-                                rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span> </a>
+                                rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span> linkedin </a>
                         </li>
                         <li> <a href="https://www.behance.net/chiaraboisaubin" aria-label="behance"
-                                rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> </a>
+                                rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> behance</a>
                         </li>
                         <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram"
-                                rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span> </a> </li>
-                        <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
-                                target="_blank"> <span class="fa fa-github"> </span> </a> </li>
-
-                        <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
-                                target="_blank"> <span class="fa fa-envelope"> </span> </a> </li>
+                                rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span> instagram </a> </li>
 
                         <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
-                                    target="_blank"> <span class=" fa fa-solid fa-calendar-days"> </span> </a> </li> 
+                            target="_blank"> <span class=" fa fa-solid fa-calendar-days">  </span> calendly</a> </li> 
+
+                        <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
+                                target="_blank"> <span class="fa fa-envelope"> </span> email </a>  </li>
+
+                          <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
+                                        target="_blank"> <span class="fa fa-github"> </span> github </a>  </li>
                     </ul>
                 </nav>
             </div>
