--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -79,8 +79,7 @@
                         </p>
 
 
-                    <img src="https://i.ibb.co/hB8G6Fq/filter-stuff.gif" alt="filter-stuff" border="0">
-                </div>
+                        <img src="https://i.ibb.co/zh5VLdk/other-methods-to-filter-and-sort.png" alt="other-methods-to-filter-and-sort" border="0">                </div>
             </div>
 
                 <div class="project-conext-container dp-containter">
@@ -277,20 +276,22 @@
             <nav class="flex-wrap">
                 <ul class="social-links">
                     <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin"
-                            rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span> </a>
-                    </li>
-                    <li> <a href="https://www.behance.net/chiaraboisaubin" aria-label="behance"
-                            rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> </a>
-                    </li>
-                    <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram" rel="noopener noreferrer"
-                            target="_blank"><span class="fa fa-instagram"> </span> </a>
-                    </li>
-                    <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
-                            target="_blank"> <span class="fa fa-github"> </span> </a> </li>
-                    <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
-                            target="_blank"> <span class="fa fa-envelope"> </span> </a> </li>
-                     <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
-                                target="_blank"> <span class="fa-solid fa-calendar"> </span> </a> </li>
+                        rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span> linkedin </a>
+                </li>
+                <li> <a href="https://www.behance.net/chiaraboisaubin" aria-label="behance"
+                        rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> behance</a>
+                </li>
+                <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram"
+                        rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span> instagram </a> </li>
+
+                <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
+                    target="_blank"> <span class=" fa fa-solid fa-calendar-days">  </span> calendly</a> </li> 
+
+                <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
+                        target="_blank"> <span class="fa fa-envelope"> </span> email </a>  </li>
+
+                  <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
+                                target="_blank"> <span class="fa fa-github"> </span> github </a>  </li>
                 </ul>
             </nav>
             <small class="copy"> © 2024 Designed and Developed by Chiara BoisAubin </small>
@@ -300,3 +301,4 @@
 
 </body>
 
+</html>
