updated content and images

--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -223,7 +223,7 @@
             <div class="background-color">
                 <h2> Handoff </h2>
                 <p>
-                    For the developers, I did provide the following information in the Figma file:
+                    For the developer's files:
                 </p>
 
                 <ul class="cute-bullets ">
@@ -239,8 +239,7 @@
             <h2> Takeaways </h2>
             <h3> Did we answer our questions? </h3>
             <p>
-                We were able to restrict the information so it is easy to find the everyday information users were
-                looking for.
+                We did learn some of the reasons why customers were not using the filtering experience. Using expose filters for certain categories will help with finding quick information. However, the main filter needs a clean-up and UI adjustments so the feature works for different platforms. 
 
             <h3> Did we achieve our goals? </h3>
             <p>
