--- a/pages/projects.html
+++ b/pages/projects.html
@@ -56,7 +56,7 @@
       
                 <a href="reviews-for-beauty-design.html"> <div class="context-background-img back-five"></div> </a>          
                 <div class="content-grid-text">
-                    <h2>Making writing and reading <br>
+                    <h2>Making reviews <br>
                         personal to shoppers </h2>
                     
                   <h3>CVS</h3> 
