--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -207,6 +207,8 @@
                 </div>
 
                 <div> 
+                    <h2> User Flow </h2>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fboard%2FsUwvCuf9Zqz4Itnctwcqza%2FRatings-and-review%3Fnode-id%3D0-1%26t%3DPJRNnScjMPoLda2u-1" allowfullscreen></iframe>
                     <h3> What was learn? </h3>
                     <ul class="cute-bullets">
                         <li> There are multiple systems for hair that identify curl pattern, texture, and volume. </li>
