--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="par">
                     <p>
-                        An excitable Senior UX / UI Designer, Product Designer, and Figma enthusiast who advocates for inclusivity and accessibility.
+                        An excitable Senior UX / UI Designer, Product Designer, and Figma enthusiast who advocates for all kinds of people.
                     </p>
                 </div>
 
