--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -213,7 +213,7 @@
                     <ul class="cute-bullets">
                         <li> There are multiple systems for hair that identify curl pattern, texture, and volume. </li>
                         <li> There are skin tones and undertones. </li>
-                        <li> RReviews help users with their shopping experience. </li>
+                        <li> Existing shoppers do believe that reviews help with their shopping experience. </li>
                     </ul>
                 </div>
                  <div>
@@ -338,7 +338,7 @@
                             </p>
 
                         <p class="medium-text"> 
-                            As a user, I want to create a review with little writing so that it can assist other shoppers.
+                            As a user, I want to create a review with little writing so that I can share my experience for others shoppers.
                          </p>
 
 
@@ -369,8 +369,7 @@
                         </div>
                         <div>
                             <h4> Foundation</h4>
-                            <img src="https://i.ibb.co/TgvR1M3/i-OS-Form-Write-CA-foundation.png" alt="i-OS-Form-Write-CA-foundation" style="width: 220px;"  border="0">
-
+                            <img src="https://i.ibb.co/0QXc396/i-OS-Form-Write-CA-foundation.png" alt="i-OS-Form-Write-CA-foundation" border="0">
                         </div>
                         <div>
                             <h4> Lipstick</h4>
