--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -365,28 +365,28 @@
                     <div class="wrap">
                         <div>
                             <h4> Shampoo</h4>
-                        <img src="https://i.ibb.co/x5GtWjh/i-OS-Form-Write-CA-shampoo.png" alt="i-OS-Form-Write-CA-shampoo" style="width: 220px;" border="0">
+                        <img src="https://i.ibb.co/x5GtWjh/i-OS-Form-Write-CA-shampoo.png" alt="i-OS Form to Write reviews -shampoo" style="width: 220px;" border="0">
                         </div>
                         <div>
                             <h4> Foundation</h4>
-                            <img src="https://i.ibb.co/0QXc396/i-OS-Form-Write-CA-foundation.png" alt="i-OS-Form-Write-CA-foundation" border="0">
+                            <img src="https://i.ibb.co/0QXc396/i-OS-Form-Write-CA-foundation.png" alt="i-OS Form to Write reviews - foundation" style="width: 220px; border="0">
                         </div>
                         <div>
                             <h4> Lipstick</h4>
                             <img src="https://i.ibb.co/pZcnJzP/i-OS-Form-Write-CA-Lipstick.png" style="width: 220px;"
-                                alt="i-OS Form Write CA Lipstick" border="0">
+                                alt="i-OS Form to Write reviews Lipstick" border="0">
                         </div>
 
                         <div>
                             <h4> Face cleanser</h4>
                             <img src="https://i.ibb.co/KjXmhcx/i-OS-Form-Write-CA-cleanser.png" style="width: 220px;"
-                                alt="i-OS-Form-Write-CA-cleanser" border="0">
+                                alt="i-OS Form to Write reviews cleanser" border="0">
 
                         </div>
                         <div>
                             <h4> Fabric Softner </h4>
                             <img src="https://i.ibb.co/Wgk8bqJ/i-OS-fabric-softener.png" style="width: 220px;"
-                                alt="i-OS-Form-Write-CA-cleanser" border="0">
+                                alt="i-OS Form to Write reviews -cleanser" border="0">
 
                         </div>
                         <!-- <div>
