--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -334,11 +334,11 @@
                         </div>  -->
                         <!-- </div> -->
                         <p class="medium-text">
-                            As a user, I want the ability to find information related to body features and location so that I can find the product that is close to my needs. 
+                            As a user, I want the ability to find information related to my features, needs, and location so that I can find the product that is close to my needs. 
                             </p>
 
                         <p class="medium-text"> 
-                            As a user, I want to create a review with little writing so that I can share my experience for others shoppers.
+                            As a user, I want to write reviews with not having to write so much so that I can share my experience with others shoppers.
                          </p>
 
 
