--- a/pages/projects.html
+++ b/pages/projects.html
@@ -58,8 +58,8 @@
                     <div class="context-background-img back-five"></div>
                 </a>
                 <div class="content-grid-text">
-                    <h2>Making reviews <br>
-                        personal to shoppers </h2>
+                    <h2> Personalizing reviews for beauty <br> 
+                        products to better assist shoppers. </h2>
 
                     <h3>CVS</h3>
                     <ul>
