--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -89,15 +89,21 @@
 
                 <div class="">
                     <h2>The goals for the project:</h2>
+                    <h2> For UX: </h2>
                     <ul class="cute-bullets">
                         <li>To make writing and reading reviews customizable </li>
-                        <li> Increase loyalty and new customers </li>
+                        <li> Practice inclusivity and accessibility.</li>
                         <li> Not offend people or isolate group(s) of potential shoppers </li>
                         <li> See how we can make the experience inclusive with existing scales for describing
-                            skin and
-                            hair </li>
-                        <li> Prove that we are finding ways to demonstrate our values, not just talking about
-                            them </li>
+                            skin and hair </li>
+                        <li> Find methods to help people create more reviews.  </li>
+                    </ul>
+                    <h2> For UI: </h2>
+                    <ul class="cute-bullets">
+                        <li>Introduce pills and chip elements. </li>
+                        <li> Adjust the experience with UI from the new CVS Design system.</li>
+                        <li> Practice accessibility. </li>
+
                     </ul>
                 </div>
 
