--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -179,6 +179,7 @@
                         <li> Difficult to Navigate - specific on web mobile, iOS, and aOS. </li>
                     </ul>
                     <img src="https://i.ibb.co/DQDTWDv/Current-PLP-filter-experience-for-app.png" alt="Current-PLP-filter-experience-for-app" border="0">
+                    <h3> Competitive analysis </h3> 
                     <img src="https://i.ibb.co/xXRFXC3/Table.png" alt="Table" border="0">
                 </div>
 
