--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -180,7 +180,7 @@
                     </ul>
                     <img src="https://i.ibb.co/DQDTWDv/Current-PLP-filter-experience-for-app.png" alt="Current-PLP-filter-experience-for-app" border="0">
                     <h3> Competitive analysis </h3> 
-                    <img src="https://i.ibb.co/xXRFXC3/Table.png" alt="Table" border="0">
+                    <img src="https://i.ibb.co/TMrVNm7/Table.png" alt="Table" border="0">
                 </div>
 
            
