--- a/pages/about.html
+++ b/pages/about.html
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <div class="about-container">
+        <div class="">
         <div class="">
             <p> Learn more about my work experience </p>
             <a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=sharing"
