adding google analytics

--- a/pages/about.html
+++ b/pages/about.html
@@ -280,5 +280,14 @@
         iframe2.src = "https://www.example.com/content-page.html#section2";
     }
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VYYM7P4JE6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VYYM7P4JE6');
+</script>
 
 </html>
