--- a/pages/projects.html
+++ b/pages/projects.html
@@ -59,7 +59,7 @@
                 </a>
                 <div class="content-grid-text">
                     <h2> Personalizing reviews for beauty <br> 
-                        products to better assist shoppers. </h2>
+                        products to better assist shoppers </h2>
 
                     <h3>CVS</h3>
                     <ul>
