--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Personalizing reviews for beauty products to better assist shoppers. </title>
+    <title> Personalizing reviews for beauty products to better assist shoppers </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -474,7 +474,7 @@
                     <li> Waiting on survey data from a third-party organization about self-description, inclusivity in the beauty industry, and shopping.</li>
                     <li> Find a way to educate users on identifying their skin and hair to assist with their shopping and reviews. </li>
                     <li> Strategize how to implement the experience and components for other products with merch, search, and product team.</li>
-                    <li> Start working on household and food products rating and review experience  </li>
+                    <li> Start working on household and food products rating and review experience. </li>
                 </ul>
             </div>   
     </div> 
