--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -301,5 +301,13 @@
 
 
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VYYM7P4JE6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-VYYM7P4JE6');
+</script>
 </html>
