--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -332,5 +332,14 @@ This project was from a UX project with Career Foundry.
             </footer>
     
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VYYM7P4JE6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VYYM7P4JE6');
+</script>
 
 </html>
