--- a/pages/about.html
+++ b/pages/about.html
@@ -75,7 +75,7 @@
                 </p>
             </div>
             <div>
-                <img class="chiara-pic" src="https://i.ibb.co/C1Pwzg4/chi2-sq.jpg" alt="chi2-sq" border="0">
+                <img class="chiara-pic" src="https://i.postimg.cc/KcBpCy33/chi2-sq.jpg" alt="chi2-sq" border="0">
             </div>
         </div>
 
@@ -108,7 +108,7 @@
         <div class="space-between">
             <div class="dp-box">
                 <h3> Understand </h3>
-                <img src="https://i.ibb.co/2FFqnyQ/Discovery.png" alt="Discovery" border="0"
+                <img src="https://i.postimg.cc/Qxq4xkbX/Discovery.png" alt="Discovery" border="0"
                     style="width: 150px; height: auto;">
                 <p> Gathering as much information about what users value and their experience with a platform or
                     product as well business goals. </p>
@@ -116,7 +116,7 @@
 
             <div class="dp-box">
                 <h3> Explore </h3>
-                <img src="https://i.ibb.co/6W4nGwY/Ideate.png" alt="Ideate" border="0"
+                <img src="https://i.postimg.cc/rmWg6Ss2/Ideate.png" alt="Ideate" border="0"
                     style="width: 150px; height: auto;">
                 <p> With the data and information gathered, start thinking about how to make the experience while
                     thinking or ways people consume information. </p>
@@ -124,14 +124,14 @@
 
             <div class="dp-box">
                 <h3> Testing </h3>
-                <img src="https://i.ibb.co/Gnj4DGG/Testing.png" alt="Testing" border="0"
+                <img src="https://i.postimg.cc/TwTTzc2Z/Testing.png" alt="Testing" border="0"
                     style="width: 150px; height: auto;">
                 <p> I will <b> always </b> advocate testing! Gathering information as soon as possible helps see issues
                     and assist with designing solutions. </p>
             </div>
             <div class="dp-box">
                 <h3> Materialize </h3>
-                <img src="https://i.ibb.co/NKFnP2G/Development.png" alt="Development" border="0"
+                <img src="https://i.postimg.cc/wM8f3wZB/Development.png" alt="Development" border="0"
                     style="width: 150px; height: auto;">
                 <p> I enjoy assisting in identifying containers and components and HTML structure; this is where my
                     development background comes out and helps conversations with development. </p>
@@ -139,12 +139,18 @@
 
             <div class="dp-box">
                 <h3> Analyze </h3>
-                <img src="https://i.ibb.co/Gnj4DGG/Analyze.pngg" alt="Testing" border="0"
+                <img src="https://i.postimg.cc/GpfSnLjG/Analyze.png" alt="Analyze" border="0"
                     style="width: 150px; height: auto;">
                 <p> Gathering user data to improve and update solutions and automated testing." The original sentence is
                     redundant and repetitively phrasing the same idea multiple times. </p>
             </div>
-            <h3> Rinse and repeat </h3>
+
+            <div class="dp-box">
+                <h3> Rinse and repeat </h3>
+                <img src="https://i.postimg.cc/wM8f3wZB/Development.png" alt="Development" border="0"
+                style="width: 150px; height: auto;">
+            </div>
+
         </div>
     </div>
     </div>
