--- a/pages/about.html
+++ b/pages/about.html
@@ -257,7 +257,7 @@
                                 target="_blank"> <span class="fa fa-github"> </span> github </a>  </li>
                 </ul>
             </nav>
-            <small class="copy"> © 2024 Designed and Developed by Chiara BoisAubin </small>
+            <small class="copy"> © 2024 Designed and Coded by Chiara BoisAubin </small>
         </div>
     </footer>
 
