updated info about user testing

--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -420,6 +420,9 @@
                     <div class="full-width-img background-color ">
 
                         <h2> User testing </h2>
+                        <p> 10 particpant</p>
+                        <p> Unmoderated </p>
+                        <p> usertesting.com </p>
                         <img src="https://i.ibb.co/mv5DgDD/Ratingandreviews-testing.png" alt="Ratingandreviews-testing results" border="0">
                             <img class="top" src="https://i.ibb.co/mDry7M4/Screenshot-2023-11-06-at-10-03-1.png"
                                  alt="Screenshot-2023-11-06-at-10-03-1" border="0">
