--- a/pages/about.html
+++ b/pages/about.html
@@ -186,7 +186,7 @@
                 <ul class="cute-bullets">
                     <li> Storyboarding </li>
                     <li> UX Workshops </li>
-                    <li> Ecommerce</li>
+                    <li> E-commerce</li>
 
                 </ul>
         </div>
