--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -133,7 +133,7 @@
                 <div class="project-conext-container">
                 <div class="">
                     <h2 class="">User problems </h2>
-                    <p>
+                    <p class="para-img"> 
                         People were not using filters throughout the CVS experience. Some feedback was gathered and
                         users want a simple way to filter information. We sought to see how we can make the experience
                         feel less overwhelming.
@@ -322,28 +322,30 @@
     
     </div>
     </div>
+
     <footer class="footer-container">
         <div class="footer-content">
             <h2> Connect with me </h2>
             <nav class="flex-wrap">
                 <ul class="social-links">
                     <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin"
-                        rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span> linkedin </a>
+                        rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span>  </a>
                 </li>
                 <li> <a href="https://www.behance.net/chiaraboisaubin" aria-label="behance"
-                        rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> behance</a>
+                        rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> </a>
                 </li>
                 <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram"
-                        rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span> instagram </a> </li>
-
-                <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
-                    target="_blank"> <span class=" fa fa-solid fa-calendar-days">  </span> calendly</a> </li> 
+                        rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span>  </a> </li>
 
                 <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
-                        target="_blank"> <span class="fa fa-envelope"> </span> email </a>  </li>
+                        target="_blank"> <span class="fa fa-envelope"> </span>  </a>  </li>
+                        <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
+                            target="_blank"> <span class=" fa fa-solid fa-calendar-days">  </span> </a> </li> 
+    
 
                   <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
-                                target="_blank"> <span class="fa fa-github"> </span> github </a>  </li>
+                                target="_blank"> <span class="fa fa-github"> </span>  </a>  </li>
+
                 </ul>
             </nav>
             <small class="copy"> © 2024 Designed and Coded by Chiara BoisAubin </small>
