--- a/pages/careof-redesign.html
+++ b/pages/careof-redesign.html
@@ -259,8 +259,8 @@
     <footer class="footer-container">
         <div class="footer-content">
             <h2> Connect with me </h2>
-            <nav class="flex-wrap">
-                <ul class="social-links">
+            <nav class="">
+                <ul class="social-links flex-wrap-r">
                     <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin"
                         rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span>  </a>
                 </li>
@@ -284,8 +284,6 @@
             <small class="copy"> © 2024 Designed and Coded by Chiara BoisAubin </small>
         </div>
     </footer>
-
-        </footer>
 
 
 </body>
