--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -326,8 +326,8 @@
     <footer class="footer-container">
         <div class="footer-content">
             <h2> Connect with me </h2>
-            <nav class="flex-wrap">
-                <ul class="social-links">
+            <nav class="">
+                <ul class="social-links flex-wrap-r">
                     <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin"
                         rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span>  </a>
                 </li>
