--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -539,34 +539,34 @@
 </div>
 </div>
     <!-- footer -->
-  <footer class="footer-container">
-            <div class="footer-content">
-                <h2> Connect with me </h2>
-                <nav class="flex-wrap">
-                    <ul class="social-links">
-                        <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin"
-                            rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span>  </a>
-                    </li>
-                    <li> <a href="https://www.behance.net/chiaraboisaubin" aria-label="behance"
-                            rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> </a>
-                    </li>
-                    <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram"
-                            rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span>  </a> </li>
+    <footer class="footer-container">
+        <div class="footer-content">
+            <h2> Connect with me </h2>
+            <nav class="">
+                <ul class="social-links flex-wrap-r">
+                    <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin"
+                        rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span>  </a>
+                </li>
+                <li> <a href="https://www.behance.net/chiaraboisaubin" aria-label="behance"
+                        rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> </a>
+                </li>
+                <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram"
+                        rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span>  </a> </li>
 
-                    <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
-                            target="_blank"> <span class="fa fa-envelope"> </span>  </a>  </li>
-                            <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
-                                target="_blank"> <span class=" fa fa-solid fa-calendar-days">  </span> </a> </li> 
-        
+                <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
+                        target="_blank"> <span class="fa fa-envelope"> </span>  </a>  </li>
+                        <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
+                            target="_blank"> <span class=" fa fa-solid fa-calendar-days">  </span> </a> </li> 
+    
 
-                      <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
-                                    target="_blank"> <span class="fa fa-github"> </span>  </a>  </li>
+                  <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
+                                target="_blank"> <span class="fa fa-github"> </span>  </a>  </li>
 
-                    </ul>
-                </nav>
-                <small class="copy"> © 2024 Designed and Coded by Chiara BoisAubin </small>
-            </div>
-        </footer>
+                </ul>
+            </nav>
+            <small class="copy"> © 2024 Designed and Coded by Chiara BoisAubin </small>
+        </div>
+    </footer>
 
 </body>
 <!-- Google tag (gtag.js) -->
