updated content, color, and font size

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 </div>
                 <div class="par">
                     <p>
-                        An excitable Senior UX / UI Designer, Product Designer, and Figma enthusiast who advocates for all kinds of people.
+                        An UX / UI Designer who advocates for all kinds of people.
                     </p>
                 </div>
 
                 <div class="btns"></div>
                 <nav class="nav-link">
-                    <ul class="link btns_more">
+                    <ul class="pages-links">
                         <li><a href="/pages/projects.html"> Projects </a></li>
                         <li><a href="/pages/about.html"> About Chiara  </a></li>
                         <li><a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=sharing"
@@ -51,22 +51,22 @@
                     </ul>
                     <ul class="social-links">
                         <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin"
-                                rel="noopener noreferrer" target="_blank"> <span class="fa fa-linkedin"> </span>  </a>
+                                rel="noopener noreferrer" target="_blank"> linkedin  </a>
                         </li>
                         <li> <a href="https://www.behance.net/chiaraboisaubin" aria-label="behance"
-                                rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> </a>
+                                rel="noopener noreferrer" target="_blank">  behance  </a>
                         </li>
                         <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram"
-                                rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span>  </a> </li>
+                                rel="noopener noreferrer" target="_blank"> instagram </a> </li>
 
                         <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
-                            target="_blank"> <span class=" fa fa-solid fa-calendar-days">  </span> </a> </li> 
+                            target="_blank">  canlendly </a> </li> 
 
                         <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
-                                target="_blank"> <span class="fa fa-envelope"> </span>  </a>  </li>
+                                target="_blank"> email </a>  </li>
 
                           <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
-                                        target="_blank"> <span class="fa fa-github"> </span>  </a>  </li>
+                                        target="_blank"> github </a>  </li>
                     </ul>
                 </nav>
             </div>
