--- a/pages/about.html
+++ b/pages/about.html
@@ -120,8 +120,8 @@
                     style="width: 150px; height: auto;">
                 <p> With the data and information gathered, start thinking about how to make the experience while
                     thinking or ways people consume information. </p>
-            </div>
-
+            </div>    
+            
             <div class="dp-box">
                 <h3> Testing </h3>
                 <img src="https://i.postimg.cc/TwTTzc2Z/Testing.png" alt="Testing" border="0"
@@ -129,6 +129,7 @@
                 <p> I will <b> always </b> advocate testing! Gathering information as soon as possible helps see issues
                     and assist with designing solutions. </p>
             </div>
+
             <div class="dp-box">
                 <h3> Materialize </h3>
                 <img src="https://i.postimg.cc/wM8f3wZB/Development.png" alt="Development" border="0"
@@ -144,11 +145,9 @@
                 <p> Gathering user data to improve and update solutions and automated testing." The original sentence is
                     redundant and repetitively phrasing the same idea multiple times. </p>
             </div>
-
-            <div class="dp-box">
+            
+            <div class="large">
                 <h3> Rinse and repeat </h3>
-                <img src="https://i.postimg.cc/wM8f3wZB/Development.png" alt="Development" border="0"
-                style="width: 150px; height: auto;">
             </div>
 
         </div>
