--- a/index.html
+++ b/index.html
@@ -73,15 +73,13 @@
         </div>
         <div class="container_outer_img">
             <div class="img-inner">
-                <img src="https://i.ibb.co/fHYMFmB/chiaras-logo.png" width="100%" alt="chiaras-logo" border="0">            </div>     
+                <img src="https://i.ibb.co/kmP3Jfr/chiaras-logo-1.png" width="100%" alt="chiaras-logo" border="0">            </div>     
             </div> 
     </div>
     </div>
     <div class="overlay"></div>
 
     </div>
-
-
 
 </body>
 <script>
