--- a/pages/chowdown.html
+++ b/pages/chowdown.html
@@ -39,8 +39,9 @@
                 <h1> Chiara BoisAubin</h1>
 
                 <ul class="link btns_more">
-                    <li><a href="projects.html"> Projects </a></li>
-                    <a href="ink-tank.html"> Next project </a>
+                    <li><a href="projects.html"> All projects</a>\</li>
+                <li><a href="ink-tank.html"> Making a tattoo appointment </a>\</li>
+                 <l1>   <a href="about.html"> About Chiara </a> </l1> 
                 </ul>
             </div>
         </nav>
@@ -85,8 +86,8 @@
                         <h3> Rinse and repeat </h3>
                         <div class="wrap">
                             <div class="">
-                                <img src="https://i.ibb.co/2FFqnyQ/Discovery.png" alt="Discovery" border="0"
-                                    style="width: 150px; height: auto;">
+                                <img src="https://i.ibb.co/M9kmjMd/Discovery-t.png" alt="Discovery" border="0"
+                                style="width: 150px; height: auto;">
                                 <h3> Discovery: </h3>
                                 <ul class="cute-bullets">
                                     <li> Competitive analysis </li>
@@ -96,8 +97,8 @@
                                 </ul>
                             </div>
                             <div class="">
-                                <img src="https://i.ibb.co/6W4nGwY/Ideate.png" alt="Ideate" border="0"
-                                    style="width: 150px; height: auto;">
+                                <img src="https://i.ibb.co/hDhmvFq/ideate-t.png" alt="Ideate" border="0"
+                                style="width: 150px; height: auto;">
                                 <h3> Ideate: </h3>
                                 <ul class="cute-bullets">
                                     <li> Low fiedlty prototypes </li>
@@ -106,8 +107,8 @@
                                 </ul>
                             </div>
                             <div class="">
-                                <img src="https://i.ibb.co/Gnj4DGG/Testing.png" alt="Testing" border="0"
-                                    style="width: 150px; height: auto;">
+                                <img src="https://i.ibb.co/Gd16L5y/testing-t.png" alt="testing-t" border="0"  style="width: 150px; height: auto;>                                style="width: 150px; height: auto;">
+    
                                 <h3> Testing: </h3>
                                 <ul>
                                     <li> User testing </li>
@@ -235,7 +236,7 @@
 
                     </ul>
                 </nav>
-                <small class="copy"> © 2024 Designed and Coded by Chiara BoisAubin </small>
+                <small class="copy"> © 2025 Designed and Coded by Chiara BoisAubin </small>
             </div>
         </footer>
 
