--- a/pages/projects.html
+++ b/pages/projects.html
@@ -36,7 +36,7 @@
             <h1> Chiara BoisAubin</h1>
             <ul class="link btns_more">
 
-                <li><a href="about.html">About Chiara </a></li>
+                <li><a href="about.html">About Chiara </a>\</li>
                 <li><a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=drive_link"
                         target="_blank">Resume </a>></li>
             </ul>
