--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,7 @@
             <h1> Chiara BoisAubin</h1>
 
             <ul class="link btns_more">
-                <li><a href="projects.html"> Projects </a></li>
+                <li><a href="projects.html"> All projects </a>\</li>
                 <li><a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=drive_link"> Resume
                     </a>></li>
             </ul>
