--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -2,16 +2,15 @@
 
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Making a tattoo appointment </title>
-    <meta property="og:title" content="Chiara's portfolio"/>
-    <meta property="og:image" content="https://i.ibb.co/rwSTSsB/Thumnail-for-site.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content=" Making a tattoo appointment"/>
+    <meta property="og:image" content="https://i.ibb.co/YLpj3jc/Ink-Tank-into.png"/>
     <meta property="og:description" content=" Making a tattoo appointment"/>
     <meta property="og:url" content="https://chiaraboisaubin.com/"/>
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627"/>
     <meta property="og:type" content="website"/> 
-
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     
     <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
