--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,20 +2,20 @@
 <html>
 
 <head>
-    <title> Selected Projects </title>
+    <title> Selected projects </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="Chiara's portfolio" />
-    <meta property="og:image" content="https://i.ibb.co/jvCMrjG/Thumnail-for-site.png" />
-    <meta property="og:description" content="Chiara's portfolio" />
+    <meta property="og:title" content="Selected projects" />
+    <meta property="og:image" content="https://i.ibb.co/s1CJrTn/fiver-thumbnail-7.png" />
+    <meta property="og:description" content="Selected projects" />
     <meta property="og:url" content="https://chiaraboisaubin.com/" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website" />
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Chiara BoisAubin's site </title>
+    <title> Selected projects</title>
     <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
         alt="cute-icon-thumbnail" border="0">
     <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
