--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="Chiara's portfolio" />
-    <meta property="og:image" content="https://i.ibb.co/jvCMrjG/Thumnail-for-site.png" />
-    <meta property="og:description" content=" Hiya! This is Chiara's portfolio" />
+    <meta property="og:title" content="Personalizing reviews for beauty products to better assist shoppers" />
+    <meta property="og:image" content="https://i.ibb.co/N2MmRyp/fiver-thumbnail-4.png" />
+    <meta property="og:description" content=" Personalizing reviews for beauty products to better assist shoppers />
     <meta property="og:url" content="https://chiaraboisaubin.com/" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
@@ -29,7 +29,7 @@
 
     <div class="content-container-project">
         <header class="header-project">
-            <h1> Personalizing reviews for beauty products to better assist shoppers.</h1>
+            <h1> Personalizing reviews for beauty products to better assist shoppers </h1>
         </header>
 
         <nav class="nav-link fixed-nav header" id="NavBar">
