--- a/pages/about.html
+++ b/pages/about.html
@@ -190,7 +190,7 @@
                 </ul>
         </div>
     </div>
-  
+  <div class="background-color-one">
         <div class="about-container">
         <div class="personal">
             <h2>I enjoy doing: </h2>
@@ -200,12 +200,13 @@
                     <img src="https://i.ibb.co/N61WQ0j/cooking-icon.png" alt="" border="0">
                     <p> Cooking </p>
                 </div>
-
+<!--
                 <div class="personal-container">
 
                     <img src="https://i.ibb.co/CsqpY3f/mingcute-movie-icon.png" alt="" border="0">
                     <p> Watching anime </p>
                 </div>
+                 -->
 
                 <div class="personal-container">
                     <img src="https://i.ibb.co/H7c9J6G/pac-person-icon.png" alt="" border="0">
@@ -223,7 +224,7 @@
                     <img src="https://i.ibb.co/Y8hvMcM/craft-icon.png" alt="" border="0">
                     <p> Crafting </p>
                 </div>
-
+            </div>
             </div>
         </div>
     </div>  
