--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -72,7 +72,7 @@
         <div class="background-color">
             <div class="context">
                 <div class="">
-                    <h2>Context</h2>
+                <h2 class="large-text">Context</h2>
                     <p class="para-img"> People like feeling important, so we have VIP sections or special events where
                         you must wait hours online or in line for a ticket. Having a membership is a way for people to
                         get the benefits of being significant but also want to have the flexibility to use it. The
