--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="background-color">
-            <h2> Context </h2>
+            <h2 class="large-text">Context</h2>
             <p>
                 Context 
 This project aimed to help new customers find a tattoo style or artist with the ability to schedule a session.  
