--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -38,7 +38,7 @@
 
                 <ul class="link btns_more">
                     <li><a href="projects.html"> All projects</a>\</li> 
-                   <li>  <a href="carepass-dashboard.html"> Membership dashboard redesign</a>\</li>
+                   <li>  <a href="expose-filter.html"> Exploring ways to improve filtering</a>\</li>
                     <li> <a href="about.html"> About Chiara </a> </li>
                 </ul>
             </div>
@@ -76,7 +76,7 @@
             <!-- Intro about project -->
             <div class="context">
                 <div>
-                    <h2>Context</h2>
+                    <h2 class="large-text">Context</h2>
 
                     <p class="para-img">
                         When people shop online, one way they will make a decision is by word of mouth; rating and
