--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -36,8 +36,9 @@
                 <h1> Chiara BoisAubin</h1>
 
                 <ul class="link btns_more">
-                    <li><a href="projects.html"> Projects </a></li>
-                    <a href="reviews-for-beauty-design.html"> Next project</a>
+                    <li><a href="projects.html"> All projects </a>\</li> 
+                 <li> <a href="carepass-dashboard.html"> Membership dashboard redesign </a> \</li>  
+                 <li> <a href="about.html"> About Chiara </a> </li>   
                 </ul>
             </div>
         </nav>
@@ -65,29 +66,28 @@
 
 
         <!-- Context about the project -->
-       
+        <div class="background-color">
+            <h2 class="large-text">Context</h2>
+                <div class="context">
+   <p>
+     Filtering is a huge part of the shopping experience.               
+    To increase users' activity for the filtering feature of the shopping
+                    experience, precisely the product list page. However, it did evolve to look at the enterprise's filtering
+                    experience, find ways to make the feature consistent, and
+                    introduce horizontal filters.
+                </p>
+
+
+                <img src="https://i.ibb.co/zh5VLdk/other-methods-to-filter-and-sort.png" alt="other-methods-to-filter-and-sort" border="0">                </div>
+    </div>
      
-                <div class="background-color">
-                    <h2 class="large-text">Context</h2>
-                        <div class="context">
-           <p>
-             Filtering is a huge part of the shopping experience.               
-            To increase users' activity for the filtering feature of the shopping
-                            experience, precisely the product list page. However, it did evolve to look at the enterprise's filtering
-                            experience, find ways to make the feature consistent, and
-                            introduce horizontal filters.
-                        </p>
-
-
-                        <img src="https://i.ibb.co/zh5VLdk/other-methods-to-filter-and-sort.png" alt="other-methods-to-filter-and-sort" border="0">                </div>
-            </div>
 
                 <div class="project-conext-container dp-containter">
                     <h2>Design Process </h2>
                     <h3> Rinse and repeat </h3>
                     <div class="wrap">
                         <div class="">
-                            <img src="https://i.ibb.co/2FFqnyQ/Discovery.png" alt="Discovery" border="0"
+                            <img src="https://i.ibb.co/M9kmjMd/Discovery-t.png" alt="Discovery" border="0"
                                 style="width: 150px; height: auto;">
                             <h3> Discovery: </h3>
                             <ul class="cute-bullets">
@@ -97,7 +97,7 @@
                         </div>
 
                         <div class="">
-                            <img src="https://i.ibb.co/6W4nGwY/Ideate.png" alt="Ideate" border="0"
+                            <img src="https://i.ibb.co/hDhmvFq/ideate-t.png" alt="Ideate" border="0"
                                 style="width: 150px; height: auto;">
                             <h3> Ideate: </h3>
                             <ul class="cute-bullets">
@@ -109,22 +109,11 @@
 
                         <div class="">
 
-                            <img src="https://i.ibb.co/Gnj4DGG/Testing.png" alt="Testing" border="0"
+                            <img src="https://i.ibb.co/Gd16L5y/testing-t.png" alt="Testing" border="0"
                                 style="width: 150px; height: auto;">
                             <h3> Testing: </h3>
                             <ul class="cute-bullets">
                                 <li> Unmoderated user testing </li>
-                            </ul>
-                        </div>
-
-                        <div class="">
-
-                            <img src="https://i.ibb.co/PxBkpsg/Analyze.png" alt="Analyze" border="0"
-                                style="width: 150px; height: auto;">
-                            <h3> Analyze: </h3>
-                            <ul class="cute-bullets">
-                                <li> User testing </li>
-                                <li> Desk research </li>
                             </ul>
                         </div>
                     </div>
